--- a/client/src/styles/Home.scss
+++ b/client/src/styles/Home.scss
@@ -30,3 +30,8 @@
   }
 }
 
+
+.shiftHistory-dateTitle {
+  text-align: center;
+  margin-bottom: 20px;
+}
